--- a/web/css/style.css
+++ b/web/css/style.css
@@ -47,3 +47,6 @@
 .searchform button:focus:before{border-right-color: #2672e0;}    
 
 .reciente p {max-height: 6rem;overflow: hidden;}.reciente p:after {content:'...';position: absolute;top: 6.5rem;right: 15px;}.reciente {border-width: medium; border: 1px solid rgba(150,150,150,0.3137254901960784); padding: 20px 25px 30px; border-radius: 2px; box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);}
+.form-compacto, .input-group .form-control{
+width: initial;
+}
