--- a/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
@@ -1,14 +1,28 @@
 {% extends '::base.html.twig' %}
+{% block stylesheets %}
+    {{ parent() }}
+    <link href="{{ asset('css/bootstrap-switch.min.css') }}" type="text/css" rel="stylesheet" />
 
+{% endblock %} 
 {% block body %}
-    <div>
+    <div class="form-inline">
             <a href="{{ path('teg') }}">
             Back to the list</a>
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                <a class="btn btn-warning" href="{{ path('teg_edit', { 'id': entity.id }) }}">
-                Edit
+                <a class="button edit btn-warning" href="{{ path('teg_edit', { 'id': entity.id }) }}">
+                Editar
                 </a>
-                {{ form(publish_form) }} 
+                {{ form_start(publish_form) }}
+                {{ form_errors(publish_form) }}
+                    <div class="checkbox">
+                        <label>
+                            {{ form_label(publish_form.published)}}{{ form_widget(publish_form.published) }}
+                        </label>
+                        {{ form_widget(publish_form.submit) }}
+                    </div>
+                    {{ form_widget(publish_form._token) }}
+                {{ form_rest(publish_form) }}
+                {{ form_end(publish_form, {'render_rest': false}) }}
             {% endif %}
         </div>
     <div class="col-md-2 col-xs-12">
@@ -24,35 +38,35 @@
         <div id="detalles" class="tab-pane fade in active form-horizontal col-md-9 col-xs-12">
             <h3>{{ entity.titulo }}</h3>
             <div class="form-group">
-                <label class="col-xs-6 col-md-2 control-label">Publicación</label> 
-                <div class="col-xs-6 col-md-9">
-                    <p class="form-control-static">{{ entity.publicacion|date('d-m-Y') }}</p>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-xs-6 col-md-2 control-label">Resumen</label> 
-                <div id="resumen" class="col-xs-12 col-md-9">
-                    <p>{{ entity.resumen}}</p>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-xs-6 col-md-2 control-label">Palabras Clave</label> 
-                <div class="col-xs-9">
-                    <p class="form-control-static">{% for iField in entity.palabrasclave %} {{ iField }}, {% endfor %}</p>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-xs-6 col-md-2 control-label">Autor(es)</label> 
+                <label class="col-sm-3 col-xs-6 col-md-2 control-label">Autor(es)</label> 
                 <div class="col-xs-9 col-md-4">
                     <p class="form-control-static">{% for iField in entity.autores %} {{ iField }}, {% endfor %}</p>
                 </div>
-                <label class="col-xs-6 col-md-2 control-label">Tutor(es)</label> 
+                <label class="col-sm-3 col-xs-6 col-md-2 control-label">Tutor(es)</label> 
                 <div class="col-xs-9 col-md-4">
                     <p class="form-control-static">{% for iField in entity.tutores %} {{ iField }}, {% endfor %}</p>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-xs-6 col-md-2 control-label">cota</label> 
+                <label class="col-sm-3 col-xs-6 col-md-2 control-label">Publicación</label> 
+                <div class="col-xs-9 col-md-4">
+                    <p class="form-control-static">{{ entity.publicacion|date('d-m-Y') }}</p>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 col-xs-6 col-md-2 control-label">Resumen</label> 
+                <div id="resumen" class="col-xs-12 col-md-9">
+                    <p>{{ entity.resumen}}</p>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 col-xs-6 col-md-2 control-label">Palabras Clave</label> 
+                <div class="col-xs-9">
+                    <p class="form-control-static">{% for iField in entity.palabrasclave %} {{ iField }}, {% endfor %}</p>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 col-xs-6 col-md-2 control-label">cota</label> 
                 <div class="col-xs-9">
                     <p class="form-control-static">{{ entity.cota}}</p>
                 </div>
@@ -69,4 +83,10 @@
             
     
     
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+<script src="{{ asset('js/bootstrap-switch.min.js') }}" type="text/javascript"></script>
+<script type="text/javascript">$("[name='form[published]']").bootstrapSwitch();</script>
+
 {% endblock %}
