--- a/web/css/style.css
+++ b/web/css/style.css
@@ -20,10 +20,12 @@
     outline: 0;
     background: #fff;
     box-shadow: 0 0 2px rgba(0,0,0,.8) inset;}
-.searchform input:-webkit-input-placeholder, input:-moz-placeholder,input:-ms-input-placeholder {
+#search_q:-webkit-input-placeholder, input:-moz-placeholder,input:-ms-input-placeholder {
     color: #999;
     font-weight: normal;
-    font-style: italic;}    
+    font-style: italic;
+    box-sizing: initial;
+}    
 .searchform button {
     width: 12%;
     color: #fff;
@@ -49,4 +51,97 @@
 .reciente p {max-height: 6rem;overflow: hidden;}.reciente p:after {content:'...';position: absolute;top: 6.5rem;right: 15px;}.reciente {border-width: medium; border: 1px solid rgba(150,150,150,0.3137254901960784); padding: 20px 25px 30px; border-radius: 2px; box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);}
 .form-compacto, .input-group .form-control{
 width: initial;
+}
+
+.button {
+    font-weight: 400;        
+    display: inline-block;
+    white-space: nowrap;
+    background-color: #ccc;
+    background-image: linear-gradient(top, #eee, #ccc);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#eeeeee', EndColorStr='#cccccc');
+    border: 1px solid #777;
+    padding: 0 1.5em;
+    margin: 0.5em;
+    font: 1em/2em Arial, Helvetica;
+    text-decoration: none;
+    color: #333;
+    text-shadow: 0 1px 0 rgba(255,255,255,.8);
+    border-radius: 4px;
+    /*box-shadow: 0 0 1px 1px rgba(255,255,255,.8) inset, 0 1px 0 rgba(0,0,0,.3);*/
+}
+
+.button:hover {
+    background-color: #ddd;        
+    background-image: linear-gradient(top, #fafafa, #ddd);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#fafafa', EndColorStr='#dddddd');
+    color: #333;
+    text-decoration: none;
+}
+
+.button:active {
+    box-shadow: 0 0 4px 2px rgba(0,0,0,.3) inset;
+    position: relative;
+    top: 1px;
+}
+
+.button:focus {
+    outline: 0;
+    background: #fafafa;
+}    
+
+.button:before {
+    background: #ccc;
+    background: rgba(0,0,0,.1);
+    float: left;        
+    width: 1em;
+    text-align: center;
+    font-size: 1.5em;
+    margin: 0 1em 0 -1em;
+    padding: 0 .2em;
+    box-shadow: 1px 0 0 rgba(0,0,0,.5), 2px 0 0 rgba(255,255,255,.5);
+    border-radius: .15em 0 0 .15em;
+    pointer-events: none;        
+}
+
+/* Hexadecimal entities for the icons */
+
+.add:before {
+    content: "\271A";
+}
+
+.edit:before {
+    content: "\270E";        
+}
+
+.delete:before {
+    content: "\2718";        
+}
+
+.save:before {
+    content: "\2714";        
+}
+
+.email:before {
+    content: "\2709";        
+}
+
+.like:before {
+    content: "\2764";        
+}
+
+.next:before {
+    content: "\279C";
+}
+
+.star:before {
+    content: "\2605";
+}
+
+.spark:before {
+    content: "\2737";
+}
+
+.play:before {
+    content: "\25B6";
 }
