--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,6 +5,8 @@
 		<title>{% block title %}Bienvenido!{% endblock %}</title>
 		{% block stylesheets %}
 			<link href="{{ asset('css/style.css') }}" type="text/css" rel="stylesheet" />
+			<link href="{{ asset('css/font-awesome.min.css') }}" type="text/css" rel="stylesheet" />
+			
 			<link href="{{ asset('css/bootstrap.min.css') }}" type="text/css" rel="stylesheet" />
 			
 			<link href="{{ asset('angular-plugins/loading-bar.min.css') }}" type="text/css" rel="stylesheet" />
@@ -14,10 +16,11 @@
 		
 	</head>
 	<body ng-app="tegApp" ng-controller="LoadCtrl">
+		{% block menubackend %}
+			{% include 'BibliotecaUserBundle::menu_backend.html.twig' %}
+		{% endblock menubackend%}
 		<div id="body" class="container">
-			{% block menubackend %}
-				{% include 'BibliotecaUserBundle::menu_backend.html.twig' %}
-			{% endblock menubackend%}
+			
 			{% block body %}
 			{% endblock %}
 		</div>
