--- a/src/Biblioteca/TegBundle/Resources/views/teg/index.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/index.html.twig
@@ -27,24 +27,19 @@
     <table class="records_list">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Cota</th>
-                <th>Publicacion</th>
                 <th>Titulo</th>
-                <th>Palabrasclaves</th>
+                <th>Publicación</th>
+                <th>Palabras Clave</th>
                 <th>Autores</th>
                 <th>Tutores</th>
-                <th>Resumen</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('teg_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.cota }}</td>
+                <td><a href="{{ path('teg_show', { 'id': entity.id }) }}">{{ entity.titulo }}</a></td>
                 <td>{% if entity.publicacion %}{{ entity.publicacion|date('m-Y') }}{% endif %}</td>
-                <td>{{ entity.titulo }}</td>
                 <td>
                     <ul>
                     {% for palabraField in entity.palabrasClave %}
@@ -72,14 +67,13 @@
                     {% endfor %}
                     </ul>
                 </td>
-                <td>{{ entity.resumen }}</td>
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('teg_show', { 'id': entity.id }) }}">show</a>
+                            <a href="{{ path('teg_show', { 'id': entity.id }) }}">Mostrar</a>
                         </li>
                         <li>
-                            <a href="{{ path('teg_edit', { 'id': entity.id }) }}">edit</a>
+                            <a href="{{ path('teg_edit', { 'id': entity.id }) }}">Editar</a>
                         </li>
                     </ul>
                 </td>
@@ -91,7 +85,7 @@
         <ul>
         <li>
             <a href="{{ path('teg_new') }}">
-                Create a new entry
+                Nuevo TEG
             </a>
         </li>
     </ul>
