--- a/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
@@ -8,7 +8,7 @@
     <div class="form-inline">
             <a href="{{ path('teg') }}">
             Back to the list</a>
-            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") and app.user.roles[0]=="ROLE_SUPER_ADMIN" %}
                 <a class="button edit btn-warning" href="{{ path('teg_edit', { 'id': entity.id }) }}">
                 Editar
                 </a>
