--- a/src/Biblioteca/UserBundle/Resources/views/menu_backend.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/menu_backend.html.twig
@@ -25,12 +25,12 @@
             <ul class="nav navbar-nav">
                 {% if isSAdmin %}
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Usuarios <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-users fa-lg"></i>&nbsp;Usuarios<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#"><i class="fa fa-user-plus fa-fw"></i><span>&nbsp;Nuevo Usuario</a></li>
+                            <li><a href="#"><i class="fa fa-plus fa-fw"></i><span>&nbsp;Añadir usuario</a></li>
                             <li><a href="#"><i class="fa fa-users fa-fw"></i><span>&nbsp;Listar Usuarios</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Historial</a></li>
+                            <li><a href="#"><i class="fa fa-history fa-fw"></i><span>&nbsp;Historial</a></li>
                         </ul>
                     </li>
                 {% endif %}
