--- a/src/Biblioteca/UserBundle/Resources/views/Profile/show_content.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/Profile/show_content.html.twig
@@ -13,5 +13,6 @@
         </div>
     </div>
 </form>
-<a class="btn btn-primary" href="{{ path('fos_user_profile_edit') }}">Editar</a>
+<a class="btn btn-warning" href="{{ path('fos_user_profile_edit') }}"><i class="fa fa-pencil-square-o fa-lg"></i> Editar</a>
+
 <a class="btn btn-primary" href="{{ path('fos_user_change_password') }}">Cambiar contraseña</a>
