--- a/src/Biblioteca/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -1,3 +1,11 @@
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title"><i class="fa fa-user-plus fa-4"></i>&nbsp; Registro de Usuario</h3>
+                </div>
+                <div class="panel-body">
 <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="form-horizontal fos_user_registration_register" role="form">
     {{ form_errors(form) }}
     <div class="form-group{% if form.name.vars.errors[0].message is defined %} has-error{% endif %}">
@@ -68,3 +76,8 @@
     </div>
     <button class="btn btn-primary" type="submit">{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}</button>
 {{ form_end(form) }}
+</div>
+            </div>
+        </div>
+    </div>
+</div>
