--- a/src/Biblioteca/UserBundle/Resources/views/menu_backend.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/menu_backend.html.twig
@@ -27,7 +27,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-users fa-lg"></i>&nbsp;Usuarios<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#"><i class="fa fa-plus fa-fw"></i><span>&nbsp;Añadir usuario</a></li>
+                            <li><a href="{{ path('fos_user_registration_register') }}"><i class="fa fa-user-plus fa-fw"></i><span>&nbsp;Añadir usuario</a></li>
                             <li><a href="#"><i class="fa fa-users fa-fw"></i><span>&nbsp;Listar Usuarios</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#"><i class="fa fa-history fa-fw"></i><span>&nbsp;Historial</a></li>
