--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,5 +1,28 @@
 body { padding-top: 70px; }
-
+.navbar-brand {
+  background-image: url("../img/logo.svg");
+  background-repeat: no-repeat;
+  background-position: 4px center;
+  background-size: auto 90%;
+  padding: 8px 0 8px 36px;
+  height: 50px;
+  color: #eee;
+}
+.navbar-brand>span {
+  text-align: center;
+  text-transform: uppercase;
+  line-height: 34px;
+}
+.navbar-brand>span>span {
+  display: block;
+  line-height: 10px;
+  font-size: 10px;
+}
+.navbar-brand>span>.focus {
+  line-height: 24px;
+  font-family: serif;
+  font-size: 24px;
+}
 @media (min-width:992px){
 #home {
     position: absolute;
@@ -53,6 +76,9 @@ body { padding-top: 70px; }
 .reciente p {max-height: 6rem;overflow: hidden;}.reciente p:after {content:'...';position: absolute;top: 6.5rem;right: 15px;}.reciente {border-width: medium; border: 1px solid rgba(150,150,150,0.3137254901960784); padding: 20px 25px 30px; border-radius: 2px; box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);}
 .form-compacto, .input-group .form-control{
 width: initial;
+}
+textarea.form-control{
+    min-height:100px;
 }
 
 .button {
