--- a/src/Biblioteca/TegBundle/Resources/views/Default/index.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/Default/index.html.twig
@@ -5,6 +5,7 @@
     {{ form_start(form) }}
         {{ form_errors(form) }}
         <div class="row">
+            <div class="col-xs-12 navbar-brand"></div>
             <div class="col-xs-12">
                 {{ form_widget(form.q) }}
                 {{ form_widget(form.submit) }}
