--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,7 +10,7 @@
 			<link href="{{ asset('css/bootstrap.min.css') }}" type="text/css" rel="stylesheet" />
 			
 			<link href="{{ asset('angular-plugins/loading-bar.min.css') }}" type="text/css" rel="stylesheet" />
-			<link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+			<link rel="icon" type="image/x-icon" href="{{ asset('/img/favicon2.ico') }}" />
 	  {% endblock %}  
 		
 		
