--- a/src/Biblioteca/UserBundle/Resources/views/Profile/show_content.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/Profile/show_content.html.twig
@@ -12,6 +12,12 @@
             <p class="form-control-static">{{ user.email }}</p>
         </div>
     </div>
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Rol</label>
+        <div class="col-sm-10">
+            <p class="form-control-static">{{ user.roles[0] }}</p>
+        </div>
+    </div>
 </form>
 <a class="btn btn-warning" href="{{ path('fos_user_profile_edit') }}"><i class="fa fa-pencil-square-o fa-lg"></i> Editar</a>
 
