Creator and Creations
Se guarda el usuario creador y se muestran sus creaciones

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,3 +1,15 @@
+{# Verificacion de Usuario #}
+{% set isAdmin = false %}
+{% set isSAdmin = false %}
+{% set isUser = false %}
+{% set isLogged = is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+{% if isLogged %}
+    {% set isAdmin = app.user.roles[0]=="ROLE_ADMIN" %}
+    {% set isSAdmin = app.user.roles[0]=="ROLE_SUPER_ADMIN" %}
+    {% set isUser = app.user.roles[0]=="ROLE_USER" %}
+{% endif %}
+{# Fin de Verificacion #}
+
 <!DOCTYPE html>
 <html>
 	<head>
