--- a/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
@@ -6,12 +6,9 @@
 {% endblock %} 
 {% block body %}
     <div class="form-inline">
-            <a href="{{ path('teg') }}">
-            Back to the list</a>
+            <a href="{{ path('teg') }}"><i class="fa fa-arrow-left fa-fw"></i><span>&nbsp;Back to the list</a>
             {% if isSAdmin or isAdmin %}
-                <a class="button edit btn-warning" href="{{ path('teg_edit', { 'id': entity.id }) }}">
-                Editar
-                </a>
+                <a class="btn btn-warning" href="{{ path('teg_edit', { 'id': entity.id }) }}"><i class="fa fa-pencil-square-o fa-lg"></i>&nbsp;Editar</a>
                 {{ form_start(publish_form) }}
                 {{ form_errors(publish_form) }}
                     <div class="checkbox">
