--- a/src/Biblioteca/UserBundle/Resources/views/usuario/index.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/usuario/index.html.twig
@@ -21,8 +21,8 @@
 {{ form_rest(form) }}
 {{ form_end(form, {'render_rest': false}) }}
 {% endif %} 
-        
-    <table class="table table-striped">
+ 
+    <table id="tabla-users" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <tr><a class="btn btn-success" href="{{ path('fos_user_registration_register') }}"><i class="fa fa-user-plus fa-fw"></i><span>&nbsp;Añadir usuario</a></tr>
             <tr>                
@@ -61,5 +61,50 @@
         {% endfor %}
         </tbody>
     </table>
-<h5>Total: {{ users | length }} usuarios</h5>
+
+{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/dataTables.bootstrap.min.css') }}">
+{% endblock %}
+
+
+{% block javascripts %}
+    {{ parent() }}  
+    <script src="{{ asset('js/jquery/1.11.3/jquery.min.js') }}"></script>
+    <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('js/dataTables.bootstrap.min.js')}}"></script>
+    <script src="{{ asset('js/jquery.dataTables.min.js')}}"></script>
+
+
+<script> $(document).ready(function() {
+    $('#tabla-users').DataTable({
+        "language": {
+            "sProcessing":     "Procesando...",
+            "sLengthMenu":     "Mostrar _MENU_",
+            "sZeroRecords":    "No se encontraron resultados",
+            "sEmptyTable":     "NingÃºn dato disponible",
+            "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ usuarios",
+            "sInfoEmpty":      "Mostrando del 0 al 0 de un total de 0 usuarios",
+            "sInfoFiltered":   "(filtrado de un total de _MAX_ usuarios)",
+            "sInfoPostFix":    "",
+            "sSearch":         "Buscar:",
+            "sUrl":            "",
+            "sInfoThousands":  ",",
+            "sLoadingRecords": "Cargando...",
+            "oPaginate": {
+                "sFirst":    "Primero",
+                "sLast":     "Ãšltimo",
+                "sNext":     "Siguiente",
+                "sPrevious": "Anterior"
+            },
+            "oAria": {
+                "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
+                "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+            }
+        }
+    });
+} );
+</script>    
 {% endblock %}
