--- a/src/Biblioteca/UserBundle/Resources/views/usuario/index.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/usuario/index.html.twig
@@ -22,7 +22,7 @@
 {{ form_end(form, {'render_rest': false}) }}
 {% endif %} 
  
-    <table id="tabla-users" class="table table-striped table-bordered" cellspacing="0" width="100%">
+    <table id="tabla-users" class="display" cellspacing="0" width="100%">
         <thead>
             <tr><a class="btn btn-success" href="{{ path('fos_user_registration_register') }}"><i class="fa fa-user-plus fa-fw"></i><span>&nbsp;Añadir usuario</a></tr>
             <tr>                
@@ -67,6 +67,7 @@
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('css/dataTables.bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/jquery.dataTables.min.css') }}">
 {% endblock %}
 
 
