--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -40,7 +40,7 @@
 			<script src="{{ asset('js/angular.min.js') }}"></script>
 			<script src="{{ asset('angular-plugins/loading-bar.min.js') }}"></script>
 			<script src="{{ asset('js/app.js') }}"></script>		
-			
+			<script src="{{ asset('js/jquery/1.11.3/jquery.min.js') }}"></script>
 			
 		{% endblock %}        
 	</body>
