--- a/src/Biblioteca/UserBundle/Resources/views/menu_backend.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/menu_backend.html.twig
@@ -13,30 +13,22 @@
             <ul class="nav navbar-nav">
                 {% if isSAdmin %}
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-users fa-lg"></i>&nbsp;Usuarios<b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="{{ path('fos_user_registration_register') }}"><i class="fa fa-user-plus fa-fw"></i><span>&nbsp;Añadir usuario</a></li>
-                            <li><a href="#"><i class="fa fa-users fa-fw"></i><span>&nbsp;Listar Usuarios</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#"><i class="fa fa-history fa-fw"></i><span>&nbsp;Historial</a></li>
-                        </ul>
+                        <a href="{{ path('fos_user_registration_register') }}"><i class="fa fa-user-plus fa-fw"></i><span>&nbsp;Añadir usuario</span></a>
                     </li>
+                    <li><a href="#"><i class="fa fa-users fa-lg"></i><span>&nbsp;Listar Usuarios</span></a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#"><i class="fa fa-history fa-fw"></i><span>&nbsp;Historial</span></a></li>
                 {% endif %}
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-book fa-lg"></i>&nbsp;TEGs<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="{{ path('teg') }}"><i class="fa fa-list fa-fw"></i><span>&nbsp;Listar</a>
-                        </li>
-                        {% if isAdmin %}
-                            <li role="separator" class="divider"></li>
-                            <li>
-                                <a href="{{ path('teg_new') }}"><i class="fa fa-plus fa-fw"></i>&nbsp;Agregar</a>
-                            </li>
-                        {% endif %}
-                    </ul>
-                </li>
+                    <a href="{{ path('teg') }}"><i class="fa fa-list fa-lg"></i><span>&nbsp;Listar TEGs</span></a></li>
+                    {% if isAdmin %}
+                    <li role="separator" class="divider"></li>
+                <li class="dropdown"><a href="{{ path('teg_new') }}"><i class="fa fa-plus fa-lg"></i>&nbsp;Agregar</a></li>
+                    {% endif %}
+                    {% if isUser %}
+                    <li role="separator" class="divider"></li>
+                    <li><a href="{{ path('teg_my') }}"><i class="fa fa-book fa-lg"></i>&nbsp;Mi TEG</a></li>
+                    {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if isLogged %}
