--- a/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
@@ -1,14 +1,16 @@
 {% extends '::base.html.twig' %}
 {% block stylesheets %}
     {{ parent() }}
-    <link href="{{ asset('css/bootstrap-switch.min.css') }}" type="text/css" rel="stylesheet" />
 
 {% endblock %} 
 {% block body %}
+<div >
     <div class="form-inline">
             <a href="{{ path('teg') }}"><i class="fa fa-arrow-left fa-fw"></i><span>&nbsp;Back to the list</a>
-            {% if isSAdmin or isAdmin %}
+            {% if edit %}
                 <a class="btn btn-warning" href="{{ path('teg_edit', { 'id': entity.id }) }}"><i class="fa fa-pencil-square-o fa-lg"></i>&nbsp;Editar</a>
+            {% endif %}
+            {% if publish_form is defined %}
                 {{ form_start(publish_form) }}
                 {{ form_errors(publish_form) }}
                     <div class="checkbox">
@@ -20,17 +22,18 @@
                     {{ form_widget(publish_form._token) }}
                 {{ form_rest(publish_form) }}
                 {{ form_end(publish_form, {'render_rest': false}) }}
+            {% endif %}
+            {% if isSAdmin or isAdmin %}
                 creado por <a href="{{ path('teg') }}">{{entity.creator}}</a>
             {% endif %}
-        </div>
+    </div>
     <div class="col-md-2 col-xs-12">
-    <ul class="nav nav-pills">
-        <li class="active"><a data-toggle="tab" href="#detalles">Detalles</a></li>
-        {% for iField in entity.capitulos %}
-                <li><a data-toggle="tab" href="#capitulo">{{ iField }}</a></li>
-        {% endfor %}
-    </ul>
-
+        <ul class="nav nav-pills">
+            <li class="active"><a data-toggle="tab" href="#detalles">Detalles</a></li>
+            {% for iField in entity.capitulos %}
+                    <li><a data-toggle="tab" href="#capitulo">{{ iField }}</a></li>
+            {% endfor %}
+        </ul>
     </div>
     <div class="tab-content">
         <div id="detalles" class="tab-pane fade in active form-horizontal col-md-9 col-xs-12">
@@ -76,15 +79,13 @@
             ></iframe>
         </div>
     </div>
-    
+</span>    
 <a href="{{ asset('bundles/bibliotecateg/js/viewer.js/index.html') }}#{{ asset('uploads/capitulos/capitulo1.pdf') }}"> AQUI </a>
-            
-    
-    
-{% endblock %}
-{% block javascripts %}
-    {{ parent() }}
-<script src="{{ asset('js/bootstrap-switch.min.js') }}" type="text/javascript"></script>
-<script type="text/javascript">$("[name='form[published]']").bootstrapSwitch();</script>
+<span>
+{{ app.request.headers.get('referer') }}
+</span><span>
 
+</span><span>            
+{{ app.request.requestUri() }}
+    </span>
 {% endblock %}
