Vista dinamica de archivos

--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -10,7 +10,7 @@
 
 {% block body %}
 
-    <div ng-app="tegApp" ng-controller="inputTegController as ctrl">
+    <div ng-controller="inputTegController as ctrl">
         <h1>Nuevo Trabajo Especial de Grado</h1>
         {{ form_start(form, { 'name': 'formInputTeg' }) }}
 
