--- a/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
@@ -4,7 +4,7 @@
 
 {% endblock %} 
 {% block body %}
-<div >
+<div ng-controller="showTegController as ctrl">
     <div class="form-inline">
             <a href="{{ path('teg') }}"><i class="fa fa-arrow-left fa-fw"></i><span>&nbsp;Back to the list</a>
             {% if edit %}
@@ -31,7 +31,10 @@
         <ul class="nav nav-pills">
             <li class="active"><a data-toggle="tab" href="#detalles">Detalles</a></li>
             {% for iField in entity.capitulos %}
-                    <li><a data-toggle="tab" href="#capitulo">{{ iField }}</a></li>
+                    <li ng-init="addChapter('{{ asset('bundles/bibliotecateg/js/viewer.js/index.html') }}#{{ asset('uploads/capitulos' ~ loop.index0 ~ '.pdf') }}');"
+
+                    ><a ng-click="setChapter({{loop.index}})" data-toggle="tab" href="#capitulo">{{ iField.name }}</a></li></br>
+
             {% endfor %}
         </ul>
     </div>
@@ -74,13 +77,12 @@
             </div>
         </div>
         <div id="capitulo" class="tab-pane fade form-horizontal col-md-9 col-xs-12">
-            <iframe id="viewer" src="{{ asset('bundles/bibliotecateg/js/viewer.js/index.html') }}#{{ asset('uploads/capitulos/capitulo1.pdf') }}"
-             width='100%' height='500px'
+            <iframe ng-src="[[currentChapterUrl]]" id="viewer" width='100%' height='500px'
             ></iframe>
         </div>
     </div>
 </span>    
-<a href="{{ asset('bundles/bibliotecateg/js/viewer.js/index.html') }}#{{ asset('uploads/capitulos/capitulo1.pdf') }}"> AQUI </a>
+<a href="{{ asset('bundles/bibliotecateg/js/viewer.js/index.html') }}#{{ asset('uploads/capitulos/capitulo[[ctrl.actual]].pdf') }}"> AQUI </a>
 <span>
 {{ app.request.headers.get('referer') }}
 </span><span>
@@ -88,4 +90,10 @@
 </span><span>            
 {{ app.request.requestUri() }}
     </span>
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+
+    <script src="{{ asset('js/tegController.js') }}" type="text/javascript"></script>
+        
 {% endblock %}
