--- a/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
@@ -31,9 +31,9 @@
         <ul class="nav nav-pills">
             <li class="active"><a data-toggle="tab" href="#detalles">Detalles</a></li>
             {% for iField in entity.capitulos %}
-                    <li ng-init="addChapter('{{ asset('bundles/bibliotecateg/js/viewer.js/index.html') }}#{{ asset('uploads/capitulos' ~ loop.index0 ~ '.pdf') }}');"
+                    <li ng-init="addChapter('{{ asset('bundles/bibliotecateg/js/viewer.js/index.html') }}#{{ asset('uploads/capitulos/capitulo' ~ loop.index0 ~ '.pdf') }}');"
 
-                    ><a ng-click="setChapter({{loop.index}})" data-toggle="tab" href="#capitulo">{{ iField.name }}</a></li></br>
+                    ><a ng-click="itemDetail(ctrl.chapters[{{loop.index}}])" data-toggle="tab" href="#capitulo">{{ iField.name }}</a></li></br>
 
             {% endfor %}
         </ul>
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div id="capitulo" class="tab-pane fade form-horizontal col-md-9 col-xs-12">
-            <iframe ng-src="[[currentChapterUrl]]" id="viewer" width='100%' height='500px'
+            <iframe ng-src="[[detailFrame]]" id="viewer" width='100%' height='500px'
             ></iframe>
         </div>
     </div>
