--- a/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
@@ -30,16 +30,15 @@
     <div class="col-md-2 col-xs-12">
         <ul class="nav nav-pills">
             <li class="active"><a data-toggle="tab" href="#detalles">Detalles</a></li>
+            
             {% for iField in entity.capitulos %}
-                    <li ng-init="addChapter('{{ asset('bundles/bibliotecateg/js/viewer.js/index.html') }}#{{ asset('uploads/capitulos/capitulo' ~ loop.index0 ~ '.pdf') }}');"
-
-                    ><a ng-click="itemDetail(ctrl.chapters[{{loop.index}}])" data-toggle="tab" href="#capitulo">{{ iField.name }}</a></li></br>
+                <li ng-init="addChapter('{{ asset('uploads/capitulos/capitulo' ~ loop.index ~ '.pdf') }}');" ><a data-toggle="tab" href="#capitulo" ng-click="itemDetail({{loop.index - 1}});"><i class="fa fa-file-pdf-o fa-fw"></i>&nbsp;{{ iField.name }}</a></li></br>
 
             {% endfor %}
         </ul>
     </div>
-    <div class="tab-content">
-        <div id="detalles" class="tab-pane fade in active form-horizontal col-md-9 col-xs-12">
+    <div class="tab-content  form-horizontal col-md-9 col-xs-12">
+        <div id="detalles" class="tab-pane fade in active">
             <h3>{{ entity.titulo }}</h3>
             <div class="form-group">
                 <label class="col-sm-3 col-xs-6 col-md-2 control-label">Autor(es)</label> 
@@ -76,13 +75,15 @@
                 </div>
             </div>
         </div>
-        <div id="capitulo" class="tab-pane fade form-horizontal col-md-9 col-xs-12">
-            <iframe ng-src="[[detailFrame]]" id="viewer" width='100%' height='500px'
-            ></iframe>
+        <div id="capitulo" class="tab-pane fade" ng-init="initViewer('{{ asset('bundles/bibliotecateg/js/viewer.js/index.html') }}');itemDetail(0);">
+            <a class="btn btn-default" download ng-href="[[detailFrame]]">Descargar&nbsp;<i class="fa fa-cloud-download fa-lg"></i></a>
+            <a class="btn btn-default" target="_blank" ng-href="[[detailFrame]]">Abrir en nueva pestaña&nbsp;<i class="fa fa-external-link fa-lg"></i></a>
+            <iframe ng-src="[[detailFrame]]" name="viewer" id="viewer" width='100%' height='500px' allowfullscreen></iframe>
+            
         </div>
     </div>
 </span>    
-<a href="{{ asset('bundles/bibliotecateg/js/viewer.js/index.html') }}#{{ asset('uploads/capitulos/capitulo[[ctrl.actual]].pdf') }}"> AQUI </a>
+
 <span>
 {{ app.request.headers.get('referer') }}
 </span><span>
